# autocut

./: README.md  config.py  config.yaml  config.yml  env_export.yml  environment.yml  main.py  pyproject.toml  requirements.txt  reset_poetry_env.bat  setup.py  utiles.py
classifiers/: gender.py
cli/: assemble.py  nameitmulti.py  nameti.py  process_video.py  test_frame.py
detectors/: face.py  mask.py  nsfw.py  person.py  pose.py
pipeline/: analyzer.py  title_generator.py
segmenters/: skin.py
